# mandel

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: m0.cpp
